# twitter-stream-rs

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
examples/: echo_bot.rs  gzip.rs  timeout.rs
examples/echo_bot/: Cargo.toml
examples/echo_bot/src/: main.rs
src/: .lib.rs.rustfmt  auth.rs  builder.rs  default_connector.rs  entities.rs  error.rs  errors.rs  geometry.rs  gzip.rs  hyper.rs  lib.rs  lines.rs  query_builder.rs  rt.rs  serde_types.in.rs  service.rs  token.rs  tweet.rs  types.rs  user.rs  util.rs
src/builder/: bounding_box.rs
src/message/: entities.rs  event.rs  mod.rs  warning.rs
src/messages/: direct_message.rs  entities.rs  geometry.rs  list.rs  mod.rs  place.rs  tweet.rs  user.rs
src/messages/stream/: event.rs  mod.rs  warning.rs
twitter-stream/: Cargo.toml
twitter-stream-message/: Cargo.toml
twitter-stream-message/src/: direct_message.rs  entities.rs  geometry.rs  lib.rs  list.rs  place.rs  tweet.rs  types.rs  user.rs  util.rs
twitter-stream-message/src/message/: event.rs  mod.rs  warning.rs
twitter-stream-message/src/message/test_assets/: falling_behind_1.json  falling_behind_1_message.in  tweet_1.json
twitter-stream/src/: auth.rs  default_connector.rs  direct_message.rs  error.rs  gzip.rs  lib.rs  list.rs  message.rs  place.rs  query_builder.rs  rt.rs  token.rs  types.rs  util.rs
