[package]
name = "twitter-stream"
edition = "2018"
version = "0.10.0-alpha.5"
authors = ["Daiki Mizukami <tesaguriguma@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["twitter"]
categories = ["api-bindings"]
homepage = "https://github.com/tesaguri/twitter-stream-rs"
repository = "https://github.com/tesaguri/twitter-stream-rs"
documentation = "https://docs.rs/twitter-stream/0.10.0-alpha.5/twitter_stream/"
description = """
A library for listening on Twitter Streaming API.
"""

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
async-compression = { version = "0.3", default-features = false, features = ["gzip", "stream"] }
bytes = "0.5"
futures-core = "0.3"
futures-util = "0.3"
http = "0.2"
http-body = "0.3"
memchr = "2"
oauth = { version = "0.3.0", package = "oauth1-request" }
pin-project-lite = "0.1"
static_assertions = "1"
string = "0.2"
tower-service = "0.3"
hyper-pkg = { version = "0.13", package = "hyper", default-features = false, optional = true }
hyper-tls = { version = "0.4", optional = true }

[features]
default = ["hyper"]
hyper = ["hyper-pkg/runtime", "hyper-tls"]

[[example]]
name = "echo_bot"

[dev-dependencies]
futures = "0.3"
hyper-pkg = { version = "0.13", package = "hyper", default-features = false }
tower = "0.3"
version-sync = "0.8"
# examples/echo_bot
egg-mode = "0.13"
json = { version = "1", package = "serde_json" }
serde = { version = "1", features = ["derive"] }
tokio = { version = "0.2", features = ["macros"] }
tokio01 = { version = "0.1", package = "tokio" }
