[package]
name = "twitter-stream"
edition = "2018"
version = "0.10.0"
authors = ["Daiki Mizukami <tesaguriguma@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["twitter"]
categories = ["api-bindings"]
homepage = "https://github.com/tesaguri/twitter-stream-rs"
repository = "https://github.com/tesaguri/twitter-stream-rs"
documentation = "https://docs.rs/twitter-stream/0.10.0/twitter_stream/"
description = """
A library for listening on Twitter Streaming API.
"""

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
bytes = "0.5"
futures-core = "0.3"
futures-util = "0.3"
http = "0.2"
http-body = "0.3"
memchr = "2"
oauth = { version = "0.3.0", package = "oauth1-request" }
oauth1-request-derive = "0.3.2"
pin-project-lite = "0.1"
slice-of-array = "0.2"
static_assertions = "1"
string = "0.2"
tower-service = "0.3"
async-compression = { version = "0.3", default-features = false, features = ["stream"], optional = true }
hyper-pkg = { version = "0.13", package = "hyper", default-features = false, optional = true }
hyper-tls = { version = "0.4", optional = true }

[features]
default = ["gzip", "hyper"]
gzip = ["async-compression/gzip"]
hyper = ["hyper-pkg/runtime", "hyper-tls"]

[[example]]
name = "echo_bot"

[[example]]
name = "timeout"

[dev-dependencies]
futures = "0.3"
hyper-pkg = { version = "0.13", package = "hyper", default-features = false }
tower = "0.3"
version-sync = "0.9"
# examples/echo_bot
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tokio = { version = "0.2", features = ["macros"] }
# examples/timeout
hyper-timeout = "0.3"
native-tls = "0.2"
pin-project = "0.4"
