[package]
name = "twitter-stream"
edition = "2018"
version = "0.13.0"
authors = ["Daiki Mizukami <tesaguriguma@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["twitter"]
categories = ["api-bindings"]
homepage = "https://github.com/tesaguri/twitter-stream-rs"
repository = "https://github.com/tesaguri/twitter-stream-rs"
documentation = "https://docs.rs/twitter-stream/0.13.0/twitter_stream/"
description = """
A library for listening on Twitter Streaming API.
"""

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
bytes = { version = "1", default-features = false }
futures-core = { version = "0.3", default-features = false }
http = "0.2"
http-body = "0.4"
memchr = "2.4"
oauth = { version = "0.5", package = "oauth1-request" }
oauth-credentials = "0.3"
pin-project-lite = "0.2"
slice-of-array = "0.3"
static_assertions = "1"
string = { version = "0.2", default-features = false }
tower-service = "0.3"
hyper-pkg = { version = "0.14", package = "hyper", optional = true }
hyper-tls = { version = "0.5", optional = true }

[features]
default = ["hyper"]
hyper = ["hyper-pkg/client", "hyper-pkg/http1", "hyper-pkg/runtime", "hyper-tls"]

[[example]]
name = "echo_bot"

[[example]]
name = "timeout"

[dev-dependencies]
futures = "0.3"
hyper-pkg = { version = "0.14", package = "hyper" }
tower = { version = "0.4", default-features = false, features = ["util"] }
version-sync = "0.9"
# examples/echo_bot
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
# examples/gzip
anyhow = "1"
tower-http = { version = "0.1", features = ["decompression-gzip"] }
# examples/timeout
hyper-timeout = "0.4"
native-tls = "0.2"
pin-project = "1"
