[package]
name = "twitter-stream"
version = "0.2.0"
authors = ["Daiki Mizukami <mizukami1113@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["twitter"]
categories = ["api-bindings"]
homepage = "https://github.com/dmizuk/twitter-stream-rs"
repository = "https://github.com/dmizuk/twitter-stream-rs"
documentation = "https://docs.rs/twitter-stream/0.2.0/twitter_stream/"
description = """
A library for listening on Twitter Streaming API.
"""

[dependencies]
bytes = "0.4.4"
futures = "0.1.4"
hyper = "0.11"
lazy_static = "0.2"
oauthcli = "1.0"
tokio-core = "0.1"
url = "1.0"
egg-mode = { version = "0.8", optional = true }
hyper-openssl = { version = "0.3", optional = true }
hyper-tls = { version = "0.1", optional = true }
native-tls = { version = "0.1", optional = true }
serde = { version = "1", optional = true }
serde_derive = { version = "1", optional = true }
tweetust = { version = "0.7", optional = true }
twitter-stream-message = { version = "0.1", optional = true }

[features]
default = ["parse", "tls", "use-serde"]
parse = ["twitter-stream-message"]
tls = ["hyper-tls", "native-tls"]
tls-openssl = ["hyper-openssl"]
use-serde = ["serde", "serde_derive"]
