[package]
name = "twitter-stream"
version = "0.6.0"
authors = ["Daiki Mizukami <tesaguriguma@gmail.com>"]
license = "MIT"
readme = "../README.md"
keywords = ["twitter"]
categories = ["api-bindings"]
homepage = "https://github.com/tesaguri/twitter-stream-rs"
repository = "https://github.com/tesaguri/twitter-stream-rs"
documentation = "https://docs.rs/twitter-stream/0.6.0/twitter_stream/"
description = """
A library for listening on Twitter Streaming API.
"""

[dependencies]
byteorder = { version = "1.2.3", features = ["i128"] }
bytes = "0.4.4"
cfg-if = "0.1"
futures = "0.1.4"
hmac = "0.6"
http = "0.1"
hyper = "0.12"
libflate = "0.1.15"
percent-encoding = "1"
rand = "0.5"
sha-1 = "0.7"
tokio = "0.1"
tokio-timer = "0.2.2"
egg-mode = { version = "0.12", optional = true }
hyper-openssl = { version = "0.6", optional = true }
hyper-rustls = { version = "0.13", optional = true }
hyper-tls = { version = "0.2", optional = true }
native-tls = { version = "0.1", optional = true }
oauthcli = { version = "1", optional = true }
serde = { version = "1", optional = true, features = ["derive"] }
tweetust = { version = "0.8", optional = true }
twitter-stream-message = { version = "0.3", optional = true }

[dev-dependencies]
base64 = "0.9"

[features]
default = ["runtime", "tls"]
parse = ["twitter-stream-message"]
# `runtime` feature does nothing useful for now, but this feature is
# necessary for the crate to compile, leaving possibility for future extension.
runtime = ["hyper/runtime"]
tls = ["hyper-tls", "native-tls"]
tls-openssl = ["hyper-openssl"]
tls-rustls = ["hyper-rustls"]
use-tweetust = ["oauthcli", "tweetust"]
