[package]
name = "echo_bot"
version = "0.1.0"
authors = ["Daiki Mizukami <tesaguriguma@gmail.com>"]
publish = false

[dependencies]
serde_json = "1"
tweetust = "0.8"
twitter-stream = { version = "0.6.0-alpha", features = ["serde", "use-tweetust"], path = "../../twitter-stream" }
twitter-stream-message = "0.3"
